crates/ebpf-cfg/tests/snapshots/golden__golden_arith_dot.snap
---
source: crates/ebpf-cfg/tests/golden.rs
expression: "dot_fixture(\"arith.bin\")"
---
digraph cfg {
  node [shape=box, fontname="monospace"];
  n0 [label="block 0 [slots 0..6]\l0   mov r1, 10\l1   mov r2, 20\l2   mov r3, r1\l3   add r3, r2\l4   mov r0, r3\l5   exit\l"];
}
