crates/ebpf-cfg/tests/snapshots/golden__golden_diamond_dot.snap
---
source: crates/ebpf-cfg/tests/golden.rs
assertion_line: 28
expression: "dot_fixture(\"diamond.bin\")"
---
digraph cfg {
  node [shape=box, fontname="monospace"];
  n0 [label="block 0 [slots 0..2]\l0   mov r1, 5\l1   jeq r1, 10, +2\l"];
  n1 [label="block 1 [slots 2..4]\l0   mov r0, 1\l1   ja +1\l"];
  n2 [label="block 2 [slots 4..5]\l0   mov r0, 2\l"];
  n3 [label="block 3 [slots 5..6]\l0   exit\l"];
  n0 -> n2 [label="true"];
  n0 -> n1 [label="false"];
  n1 -> n3 [label="jump"];
  n2 -> n3 [label=""];
}
