crates/ebpf-cfg/tests/snapshots/golden__golden_loop_dot.snap
---
source: crates/ebpf-cfg/tests/golden.rs
assertion_line: 44
expression: "dot_fixture(\"loop.bin\")"
---
digraph cfg {
  node [shape=box, fontname="monospace"];
  n0 [label="block 0 [slots 0..2]\l0   mov r0, 0\l1   mov r1, 0\l"];
  n1 [label="block 1 [slots 2..5]\l0   add r0, 1\l1   add r1, 1\l2   jlt r1, 10, +-3\l"];
  n2 [label="block 2 [slots 5..6]\l0   exit\l"];
  n0 -> n1 [label=""];
  n1 -> n1 [label="true"];
  n1 -> n2 [label="false"];
}
